# VGC-Reporter

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/adapters/: gen9_supplement.rs  http_client.rs  labmaus_client.rs  labmaus_discover_sample.json  limitless_client.rs  mod.rs  pikalytics_client.rs  pikalytics_sample.html  pkmn_data_client.rs  pokeapi_client.rs  pokepaste_client.rs  pokepaste_sample.txt  showdown_client.rs  smogon_client.rs  sprite_resolver.rs
src-tauri/src/commands/: champions.rs  meta.rs  mod.rs  pikalytics.rs  pokedex.rs  regulations.rs  settings.rs  teams.rs  top_teams.rs  top_teams_export.rs  translations.rs  trending.rs  upcoming.rs  updater.rs
src-tauri/src/domain/: ability.rs  champions.rs  evs.rs  format.rs  item.rs  ivs.rs  mod.rs  move_.rs  nature.rs  pikalytics.rs  pokemon.rs  sets.rs  team.rs  tera_type.rs  trending.rs  upcoming.rs  updater.rs  usage_stats.rs
src-tauri/src/services/: champions_report_service.rs  date_window.rs  meta_service.rs  mod.rs  pikalytics_service.rs  pokedex_service.rs  sets_service.rs  showdown_text.rs  team_service.rs  top_teams_export.rs  top_teams_service.rs  translations_service.rs  trending_service.rs  upcoming_tournaments_service.rs  updater_service.rs  usage_aggregator.rs
src-tauri/src/storage/: cache_repo.rs  db.rs  mod.rs  settings_repo.rs  team_repo.rs
(+152 files in other folders)
