[package]
name = "vgc-reporter"
version = "0.0.6"
description = "VGC-Reporter - Pokemon Champions stats & team builder"
authors = ["PumaSoft"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "vgc_reporter_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
regex = "1"
csv = "1"

ts-rs = { version = "10", features = ["serde-compat", "chrono-impl"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
